column-gap fixed

--- a/src/sass/components/_grid.scss
+++ b/src/sass/components/_grid.scss
@@ -1,6 +1,7 @@
 .myGrid{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: flex-start;
     row-gap: 3.125rem;
+    column-gap: 1.8rem;
 }
